--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.15",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.4",
+    "nodemailer": "^6.9.13",
     "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
